--- a/suporte.html
+++ b/suporte.html
@@ -4,137 +4,132 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Suporte </title>
+    <title>Suporte</title>
     <link rel="stylesheet" href="./src/assets/css/suporte.css">
 </head>
 
 <body>
-
-
     <header>
         <div class="container-header">
             <div class="logo">
                 <img src="./src/assets/image/senac_logo_branco.png" alt="">
             </div>
-
             <div class="container-menu">
                 <nav class="menu">
                     <ul>
                         <a href="#">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="30" height="30"
                                 fill="white">
-                                <!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
                                 <path
                                     d="M128 0c17.7 0 32 14.3 32 32l0 32 128 0 0-32c0-17.7 14.3-32 32-32s32 14.3 32 32l0 32 48 0c26.5 0 48 21.5 48 48l0 48L0 160l0-48C0 85.5 21.5 64 48 64l48 0 0-32c0-17.7 14.3-32 32-32zM0 192l448 0 0 272c0 26.5-21.5 48-48 48L48 512c-26.5 0-48-21.5-48-48L0 192zm64 80l0 32c0 8.8 7.2 16 16 16l32 0c8.8 0 16-7.2 16-16l0-32c0-8.8-7.2-16-16-16l-32 0c-8.8 0-16 7.2-16 16zm128 0l0 32c0 8.8 7.2 16 16 16l32 0c8.8 0 16-7.2 16-16l0-32c0-8.8-7.2-16-16-16l-32 0c-8.8 0-16 7.2-16 16zm144-16c-8.8 0-16 7.2-16 16l0 32c0 8.8 7.2 16 16 16l32 0c8.8 0 16-7.2 16-16l0-32c0-8.8-7.2-16-16-16l-32 0zM64 400l0 32c0 8.8 7.2 16 16 16l32 0c8.8 0 16-7.2 16-16l0-32c0-8.8-7.2-16-16-16l-32 0c-8.8 0-16 7.2-16 16zm144-16c-8.8 0-16 7.2-16 16l0 32c0 8.8 7.2 16 16 16l32 0c8.8 0 16-7.2 16-16l0-32c0-8.8-7.2-16-16-16l-32 0zm112 16l0 32c0 8.8 7.2 16 16 16l32 0c8.8 0 16-7.2 16-16l0-32c0-8.8-7.2-16-16-16l-32 0c-8.8 0-16 7.2-16 16z" />
                             </svg>
-                            <li>
-                                RESERVAR
-                            </li>
+                            <li>RESERVAR</li>
                         </a>
-
-                        <a href=" #">
+                        <a href="#">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="30" height="30"
-                                fill="white"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
+                                fill="white">
                                 <path
                                     d="M384 96l0 128-128 0 0-128 128 0zm0 192l0 128-128 0 0-128 128 0zM192 224L64 224 64 96l128 0 0 128zM64 288l128 0 0 128L64 416l0-128zM64 32C28.7 32 0 60.7 0 96L0 416c0 35.3 28.7 64 64 64l320 0c35.3 0 64-28.7 64-64l0-320c0-35.3-28.7-64-64-64L64 32z" />
                             </svg>
-                            <li>
-                                PAINEL
-                            </li>
+                            <li>PAINEL</li>
                         </a>
-
-                        <a href=" #">
+                        <a href="#">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="30" height="30"
-                                fill="white"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
+                                fill="white">
                                 <path
                                     d="M96 0C43 0 0 43 0 96L0 416c0 53 43 96 96 96l288 0 32 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l0-64c17.7 0 32-14.3 32-32l0-320c0-17.7-14.3-32-32-32L384 0 96 0zm0 384l256 0 0 64L96 448c-17.7 0-32-14.3-32-32s14.3-32 32-32zm32-240c0-8.8 7.2-16 16-16l192 0c8.8 0 16 7.2 16 16s-7.2 16-16 16l-192 0c-8.8 0-16-7.2-16-16zm16 48l192 0c8.8 0 16 7.2 16 16s-7.2 16-16 16l-192 0c-8.8 0-16-7.2-16-16s7.2-16 16-16z" />
                             </svg>
-                            <li>
-                                HISTÓRICO
-                            </li>
+                            <li>HISTÓRICO</li>
                         </a>
-
-
                         <a href="#">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" width="30" height="30"
-                                fill="white"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
+                                fill="white">
                                 <path
                                     d="M215.4 96L144 96l-36.2 0L96 96l0 8.8L96 144l0 40.4 0 89L.2 202.5c1.6-18.1 10.9-34.9 25.7-45.8L48 140.3 48 96c0-26.5 21.5-48 48-48l76.6 0 49.9-36.9C232.2 3.9 243.9 0 256 0s23.8 3.9 33.5 11L339.4 48 416 48c26.5 0 48 21.5 48 48l0 44.3 22.1 16.4c14.8 10.9 24.1 27.7 25.7 45.8L416 273.4l0-89 0-40.4 0-39.2 0-8.8-11.8 0L368 96l-71.4 0-81.3 0zM0 448L0 242.1 217.6 403.3c11.1 8.2 24.6 12.7 38.4 12.7s27.3-4.4 38.4-12.7L512 242.1 512 448s0 0 0 0c0 35.3-28.7 64-64 64L64 512c-35.3 0-64-28.7-64-64c0 0 0 0 0 0zM176 160l160 0c8.8 0 16 7.2 16 16s-7.2 16-16 16l-160 0c-8.8 0-16-7.2-16-16s7.2-16 16-16zm0 64l160 0c8.8 0 16 7.2 16 16s-7.2 16-16 16l-160 0c-8.8 0-16-7.2-16-16s7.2-16 16-16z" />
                             </svg>
-                            <li>
-                                SUPORTE
-                            </li>
+                            <li>SUPORTE</li>
                         </a>
-
                     </ul>
-
                 </nav>
             </div>
         </div>
-        
     </header>
-
 
     <div id="divgradientHome"></div>
 
     <main>
         <section id="pagina-suporte">
-            <div>
-                <H1 class="titulo">SUPORTE</H1>
+            <div class="container-totulo">
+                <div class="container-icone">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" width="110" height="110"
+                        fill="#454545">
+                        <path
+                            d="M215.4 96L144 96l-36.2 0L96 96l0 8.8L96 144l0 40.4 0 89L.2 202.5c1.6-18.1 10.9-34.9 25.7-45.8L48 140.3 48 96c0-26.5 21.5-48 48-48l76.6 0 49.9-36.9C232.2 3.9 243.9 0 256 0s23.8 3.9 33.5 11L339.4 48 416 48c26.5 0 48 21.5 48 48l0 44.3 22.1 16.4c14.8 10.9 24.1 27.7 25.7 45.8L416 273.4l0-89 0-40.4 0-39.2 0-8.8-11.8 0L368 96l-71.4 0-81.3 0zM0 448L0 242.1 217.6 403.3c11.1 8.2 24.6 12.7 38.4 12.7s27.3-4.4 38.4-12.7L512 242.1 512 448s0 0 0 0c0 35.3-28.7 64-64 64L64 512c-35.3 0-64-28.7-64-64c0 0 0 0 0 0zM176 160l160 0c8.8 0 16 7.2 16 16s-7.2 16-16 16l-160 0c-8.8 0-16-7.2-16-16s7.2-16 16-16zm0 64l160 0c8.8 0 16 7.2 16 16s-7.2 16-16 16l-160 0c-8.8 0-16-7.2-16-16s7.2-16 16-16z" />
+                    </svg>
+                </div>
+                <div>
+                    <H1 class="titulo">SUPORTE</H1>
+                </div>
             </div>
+
+            <div class="container-paragrafo">
+                <p>Utilize esse portal para reportar problemas ou solicitar serviços para o time de suporte.</p>
+            </div>
+
 
             <div id="main-suporte">
                 <div id="container-forms-suport">
                     <form id="formulario-suporte" action="submit">
                         <div id="container-1">
-                            <div id="img-pc"></div>
+                            <div id="img-pc">
+                                <svg xmlns="http://www.w3.org/2000/svg"
+                                viewBox="0 0 512 512" width="178" height="118" fill="#454545"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
+                                    <path
+                                        d="M128 32C92.7 32 64 60.7 64 96l0 256 64 0 0-256 384 0 0 256 64 0 0-256c0-35.3-28.7-64-64-64L128 32zM19.2 384C8.6 384 0 392.6 0 403.2C0 445.6 34.4 480 76.8 480l486.4 0c42.4 0 76.8-34.4 76.8-76.8c0-10.6-8.6-19.2-19.2-19.2L19.2 384z" />
+                                </svg>
+                            </div>
                             <div id="ccontainer-inventario">
-                                <label class="label-suporte" for=" inventario">Inventário:</label>
+                                <label class="label-suporte" for="inventario">Inventário:</label>
                                 <input class="input-suporte" type="text" name="inventario"
                                     placeholder="Digite o número de identificação do notebook">
                             </div>
                         </div>
 
-
-                        <label class="label-suporte" for=" sintese">Sintetise sua solicitação:</label>
+                        <label class="label-suporte" for="sintese">Sintetise sua solicitação:</label>
                         <input class="input-suporte" type="text" name="sintese" placeholder="Ex: notebook não liga"
                             required>
 
                         <label class="label-suporte" for="tipo-solicitacao">Tipo de solicitação:</label>
-                        <select class="select-suporte" id="tipo-solicitacao" name="tipo-solicitacao" required>
+                        <select  id="tipo-solicitacao" name="tipo-solicitacao" required>
                             <option value="">Selecione</option>
                             <option value="male">Problema</option>
                             <option value="female">Dúvida</option>
                             <option value="other">Melhoria</option>
                         </select>
 
-                        <label class="label-suporte" for="tipo-problema">Sub-serviço:</label>
+                        <label class="label-suporte" for="subservico">Sub-serviço:</label>
                         <select class="select-suporte" id="subservico" name="subservico" required>
                             <option value="">Selecione</option>
                             <option value="male">Não liga</option>
                             <option value="female">Lentidão</option>
                             <option value="other">Instalar programa</option>
                             <option value="other">Falta de armazenamento</option>
-                            <option value="other">fisicamente danificado</option>
+                            <option value="other">Fisicamente danificado</option>
                             <option value="other">Solicitar periférico</option>
                         </select>
 
-                        <label class="label-suporte" for="descricao-problema">Descreva o problema</label>
+                        <label class="label-suporte" for="descricao-problema">Descreva o problema:</label>
                         <textarea class="textarea-suporte" id="descricao-problema" name="descricao-problema" rows="4"
                             placeholder="Escreva sua mensagem"></textarea>
+
                         <div id="container-btn-enviar">
                             <button id="btn-enviar" type="submit">Enviar</button>
                         </div>
-
                     </form>
                 </div>
-
-
             </div>
-
         </section>
     </main>
-
 
     <footer id="rodape">
         <figure>
@@ -142,6 +137,8 @@
         </figure>
         <h2>Senac Unidade Zona Norte</h2>
     </footer>
+
+
 
     <script src=""></script>
 </body>
