--- a/home.html
+++ b/home.html
@@ -90,6 +90,13 @@
     <h1>FAÇA SUA RESERVA</h1>
   </section>
 
+  <div id="loading-overlay" style="display: none;">
+    <div id="loading-spinner">
+      <div class="spinner"></div>
+      <p>Carregando...</p>
+    </div>
+  </div>
+
 
 
   <main class="containerhome">
