--- a/home.html
+++ b/home.html
@@ -65,12 +65,14 @@
               </svg>
               <li>SUPORTE</li>
             </a>
-            <a id="notebook-link" href="./notebook.html">
-              <svg xmlns="http://www.w3.org/2000/svg" height="20" width="25" viewBox="0 0 640 512" fill="white">
+            <a id="notebook-link" href="notebook.html" style="display: flex;">
+              <svg id="svg-laptop" xmlns="http://www.w3.org/2000/svg" height="30" width="35" viewBox="0 0 640 512"
+                width="50" height="50"
+                fill="white"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
                 <path
-                  d="M128 32C92.7 32 64 60.7 64 96l0 256 64 0 0-256 384 0 0 256 64 0 0-256c0-35.3-28.7-64-64-64L128 32zM19.2 384C8.6 384 0 392.6 0 403.2C0 445.6 34.4 480 76.8 480l486.4 0c42.4 0 76.8-34.4 76.8-76.8c0-10.6-8.6-19.2-19.2-19.2L19.2 384z" />
+                  d="M64 96c0-35.3 28.7-64 64-64l384 0c35.3 0 64 28.7 64 64l0 256-64 0 0-256L128 96l0 256-64 0L64 96zM0 403.2C0 392.6 8.6 384 19.2 384l601.6 0c10.6 0 19.2 8.6 19.2 19.2c0 42.4-34.4 76.8-76.8 76.8L76.8 480C34.4 480 0 445.6 0 403.2zM288 160c0-8.8 7.2-16 16-16l32 0c8.8 0 16 7.2 16 16l0 48 48 0c8.8 0 16 7.2 16 16l0 32c0 8.8-7.2 16-16 16l-48 0 0 48c0 8.8-7.2 16-16 16l-32 0c-8.8 0-16-7.2-16-16l0-48-48 0c-8.8 0-16-7.2-16-16l0-32c0-8.8 7.2-16 16-16l48 0 0-48z" />
               </svg>
-              <li>NOTEBOOKS</li>
+              <li>NOTESBOOKS</li>
             </a>
           </ul>
         </nav>
@@ -86,6 +88,8 @@
       <p>Carregando...</p>
     </div>
   </div>
+
+  <button id="logoffButton">Sair</button>
 
 
   <main>
@@ -133,6 +137,8 @@
           </div>
         </div>
         <div class="bottom-section1">
+
+          
           <div class="formInputHome1">
             <label class="label-suporte" for="">Horario:</label>
             <Select id="horario">
